deploy/overlay/langfuse/webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lf-wb

spec:
  replicas: 4
  selector:
    matchLabels:
      app: lf-wb
  template:
    metadata:
      labels:
        app: lf-wb
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - worker2 
      containers:
      - name: langfuse-web
        image: langfuse/langfuse:3
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "2"
            memory: "2Gi"
          limits:
            cpu: "2"
            memory: "2Gi"
