deploy/overlay/langfuse/webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lf-wb-service
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: rd
  selector:
    app: lf-wb
  

---


apiVersion: v1
kind: Service
metadata:
  name: lf-internal-service
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: rd
  selector:
    app: lf-wb
