deploy/overlay/langfuse/webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lf-wb-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - langfuse.rutu-sh.com
      secretName: lf-tls-secret
  rules:
  - host: langfuse.rutu-sh.com
    http:
      paths: 
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lf-wb-service
            port:
              number: 3000
